--- a/quien-soy.html
+++ b/quien-soy.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>metroycincuenta</title>
     <meta name="author" content="Amaranta Elizalde-Clift">
-    <meta name="description" content="asesorías experiencia de usuario, diseño de servicios, investigación">
+    <meta name="description" content="asesorías experiencia de usuario, diseño de servicios">
     <meta name="keywords" content="UX, UI, metroycincuenta, sociología, research, investigación">
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">        
@@ -25,92 +25,86 @@
 </head>
 
 <body>
+<!--encabezado amarillo-->
 
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+<section class="header text-center">
+  <h5>
+    <span class="nueva">metro</span> y cincuenta
+  </h5>
+</section>
 
-          <div class="collapse navbar-collapse" id="navbarNav">
-            
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="quien-soy.html">Experiencia</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="portafolio.html">Portafolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Planes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Blog</a>
-              </li>
-            </ul>
-          </div>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-5">
+    <div class="container-fluid ml-5">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item px-5">
+            <a class="nav-link active" aria-current="page" href="#">NOSOTR-S</a>
+          </li>
+          <li class="nav-item px-5">
+            <a class="nav-link active" aria-current="page" href="#">PLANES</a>
+          </li>
+          <li class="nav-item px-5">
+            <a class="nav-link active" aria-current="page" href="#">VISIÓN</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+ 
+ <!-- Título -->
+
+ <section>
+    <div class="text-center mt-5 mb-3">
+      <hr class="mt-3" size="4px">
+        <h4 class="la-experiencia">
+          LA EXPERIENCIA DE USAR
+        </h4>
+      <hr size="4px">
+    </div>
+</section>
+
+<!--Párrafo-->
+
+<section class="p-5">
+  <div class="container">
+      <H4>
+        ¿Qué es UX/UI?
+      </H4>
+        <div class="p-5">
+          <p class="mt-5">
+            Nuestra propuesta es que tus clientes disfruten tus servicios, y se aproximen a ellos de manera sencilla y accesible.
+          </p>
+          <p>
+            Queremos ayudarte a conocer sus perfiles, atender sus expectativas y generar una experienicia memorable.
+          </p>
+          <p>
+            Desarrollamos contenido pensando en first mobile pero manteniendo la web como un lugar acogedor que convoque al usuario final.
+          </p>
+          <p>
+            Nuestro sello es la investigación, lo que entregamos siempre tendrá sentido para quien lo use, porque nuestro centro siempre es la persona.
+          </p>
         </div>
-      </nav>
-      
-    <!-- hero section  -->
-    <header class="hero">
-        <div class="container">
-            <div> <h2>el en</h2></div>
-            <div> <h2>cuen</h2></div>
-            <div> <h2>tro</h2></div>
-        </div>
-
-        <div class="container">
-          <div class="card">
-            <div class="card-body">
-              <h2 class="text-end">entre </h2> 
-              <h2 class="text-end">dos</h2> 
-              <h2 class="text-end">distintos</h2> 
-            </div>
-          </div>
-        </div>
-
-    </header>
+  </div>
+</section>
 
     <!-- CTA -->
+
     <section class="mt-3 mb-3 container text-center">
         <button type="button" class="px-5 btn btn-warning btn-lg">Cotizar</button>
     </section>
 
-
-    <!-- características -->
-    <div class="container text-center mt-5">
-      <div class="row">
-        <div class="col-sm">
-          <img src="assets/img/minimalismo.jpg" alt="minimalismo">
-          <p class="mt-2">minimalismo</p>
-        </div>
-        <div class="col-sm">
-          <img src="assets/img/distinción.jpg" alt="distinción">
-          <p class="mt-2">distinción</p>
-        </div>
-        <div class="col-sm">
-          <img src="assets/img/elegancia.jpg" alt="elegancia">
-          <p class="mt-2">elegancia</p>
-        </div>
+    <!-- Pie de página-->
+    <section>
+      <div class="container mt-5 mb-3 my-3">
+          <p class="pequeño">
+            *Metro y cincuenta™ es una marca creada por Amaranta Elizalde Clift, socióloga y diseñadora UX/UI. 
+          </p>
       </div>
-    </div>
-
-    <!-- la oferta -->
-    <div class="container text-end mt-3 mb-3">
-      <hr class="mt-3">
-        <h3>
-          CONSULTORÍAS UX/UI
-        </h3>
-        <H4>
-          la experiencia de usar
-        </H4>
-        <hr>
-    </div>
+    </section>
 
     <!-- footer -->
-    <section class="footer container-fluid mt-5">
+    <section class="footer container-fluid mt-5 px-4">
       <div class="row p-5">
         <div class="col mt-3">
           <h4 class="metroycincuenta">MyC</h4>
